--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,8 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+      env:
+        BASE_URL: 'https://playwright.dev/docs/ci-intro'
     - uses: actions/upload-artifact@v3
       if: always()
       with:
