--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run Playwright tests
-      run: npx playwright test
+      env: 
+        HOME: /root
+      run: npm run test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
