--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -1,10 +1,10 @@
 name: Node.js CI
  
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
   workflow_dispatch:
     inputs:
       testExecKey:
@@ -20,6 +20,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.41.1-jammy
  
     strategy:
       matrix:
@@ -27,24 +29,23 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
  
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - name: Install dependencies
+      run: npm ci
     - name: Output Inputs
       run: echo "${{ toJSON(github.event.inputs) }}"
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: |
-        npm install
-        npm i -D @playwright/test
-        npx playwright install
     - name: Run tests
       continue-on-error: true
+      env: 
+        HOME: /root
       run: | 
         npx playwright test
     - name: Output results file
       run: |
-        cat results.xml
+        cat **/results.xml
     - name: "Import results to Xray"
       uses: mikepenz/xray-action@v2.3.0
       with:
