--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -1,8 +1,8 @@
-name: Node.js CI
+name: xray
  
 on:
-  # push:
-  #   branches: [ main ]
+  push:
+    branches: [ main ]
   # pull_request:
   #   branches: [ main ]
   workflow_dispatch:
@@ -36,7 +36,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Output Inputs
-      run: echo "${{ toJSON(github.event.inputs) }}"
+      run: 
+       echo "${{ toJSON(github.event.inputs) }}"
+       pwd
     - name: Run tests
       continue-on-error: true
       env: 
