--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -36,13 +36,15 @@ jobs:
     - name: Output Inputs
       run: echo "${{ toJSON(github.event.inputs) }}"
     - name: Get current working folder
-      run: echo $PWD
+    - run: echo $PWD
     - name: Run tests
       continue-on-error: true
       env: 
         HOME: /root
       run: | 
         npx playwright test --grep '@only'
+    - run: cd .\Playwright_LamdaTest\
+    - run: ls
     - name: Output results file
       run: |
         cat **/results.xml
