github actions with .env

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
+
+XRAY_GENERATE_REPORT=
+XRAY_TESTPLAN=
+XRAY_TESTEXECUTION=
+XRAY_HOST=https://xray.cloud.getxray.app
+XRAY_CLIENT_ID=
+XRAY_CLIENT_SECRET=
