--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -47,11 +47,10 @@ jobs:
       run: |
         cat results.xml
     - name: 'Load environment variables'
-      uses: dotenv-actions/setup-dotenv@v2
-      with:
-        dotenv_path: .env
+      id: dotenv
+      uses: ./.github/actions/dotenv-action
     - name: "Import results to Xray"
       run: |
-        BASE_URL=$XRAY_HOST
+        BASE_URL=${{ steps.dotenv.outputs.XRAY_HOST }}
         token=$(curl -H "Content-Type: application/json" -X POST --data '{ "client_id": "${{ secrets.XRAY_CLIENT_ID }}","client_secret": "${{ secrets.XRAY_CLIENT_SECRET }}" }' $BASE_URL/api/v1/authenticate| tr -d '"')
         curl -H "Content-Type: text/xml" -X POST -H "Authorization: Bearer $token"  --data @"results.xml" "https://xray.cloud.getxray.app/api/v1/import/execution/junit?projectKey=KAN&testExecKey=KAN-11&testEnvironments=QA"
