--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ TEST_ENVIRONMENT=QA
 
 XRAY_GENERATE_REPORT=
 XRAY_TESTPLAN=
-XRAY_TESTEXECUTION=
+XRAY_PROJECTKEY=KAN
+XRAY_TESTEXECUTION=KAN-11
 XRAY_HOST=https://xray.cloud.getxray.app
 XRAY_CLIENT_ID=
 XRAY_CLIENT_SECRET=
