run on test plan

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
 
 XRAY_GENERATE_REPORT=results.xml
-XRAY_TESTPLAN=
+XRAY_TESTPLAN=KAN-7
 XRAY_PROJECTKEY=KAN
 XRAY_TESTEXECUTION=KAN-11
 XRAY_HOST=https://xray.cloud.getxray.app
