--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -20,7 +20,7 @@ jobs:
       env: 
         HOME: /root
       run: | 
-        npx playwright test --grep '@only'
+        npm run test
     - name: Output results file
       run: |
         cat results.xml
