--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
+BASE_URL= https://ecommerce-playground.lambdatest.io/
+API_URL= https://ecommerce-playground.lambdatest.io/index.php/
 
 XRAY_GENERATE_REPORT=results.xml
 XRAY_TESTPLAN=KAN-7
 XRAY_PROJECTKEY=KAN
-XRAY_TESTEXECUTION=KAN-11
+XRAY_TESTEXECUTION=KAN-16
