--- a/.env
+++ b/.env
@@ -2,8 +2,11 @@ PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
 BASE_URL= https://ecommerce-playground.lambdatest.io/
 API_URL= https://ecommerce-playground.lambdatest.io/index.php/
+USER_NAME=myname1@gmail.com
+PASSWORD=password
 
 XRAY_GENERATE_REPORT=results.xml
 XRAY_TESTPLAN=KAN-7
 XRAY_PROJECTKEY=KAN
 XRAY_TESTEXECUTION=KAN-16
+
