--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
 BASE_URL= https://ecommerce-playground.lambdatest.io/
+FRONTEND_URL=http://localhost:5173
 API_URL= https://ecommerce-playground.lambdatest.io/index.php/
 USER_NAME=myname1@gmail.com
 PASSWORD=password
