--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,20 +8,18 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.41.1-jammy
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: 20
     - name: Install dependencies
-      run: npm i
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
     - name: Run Playwright tests
-      env: 
-        HOME: /root
-      run: npm run test
-    - uses: actions/upload-artifact@v3
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
