--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,14 +8,22 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.41.1-jammy
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 18
     - name: Install dependencies
-      run: npm i
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run test coverage
-      run: npm run coverage
+      run: npm ci
+    - name: Run Playwright tests
+      env: 
+        HOME: /root
+      run: npm run test
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
