--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -17,6 +17,7 @@ on:
                 type: string
 jobs:
     test:
+        timeout-minutes: 60
         runs-on: ubuntu-latest
         container:
             image: mcr.microsoft.com/playwright:v1.41.1-jammy
@@ -27,12 +28,18 @@ jobs:
                   node-version: 18
             - name: Install dependencies
               run: npm ci
-            - name: Run tests
+            - name: Run Playwright tests
               continue-on-error: true
               env:
                   HOME: /root
               run: |
                   npm run run:test
+            - uses: actions/upload-artifact@v3
+              if: always()
+              with:
+                  name: playwright-report
+                  path: playwright-report/
+                  retention-days: 30
             - name: Output results file
               run: |
                   cat results.xml
