--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /results.xml
+
+build-storybook.log
+chromatic.log
+chromatic-build-*.xml
+chromatic-diagnostics.json
