--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "playwright_multiprojects",
+  "name": "Playwright_LamdaTest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "run:only": "npx playwright test --grep '@only'",
     "run:test": "npx playwright test",
-    "run:api":"npx playwright test --project=api"
+    "run:api": "npx playwright test --project=api"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@chromatic-com/playwright": "^0.6.4",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.41.2",
     "@types/node": "^20.11.7",
+    "chromatic": "^11.0.8",
     "dotenv": "^16.4.5"
   }
 }
