--- a/.github/workflows/sharding.yml
+++ b/.github/workflows/sharding.yml
@@ -18,12 +18,13 @@ on:
 jobs:
     playwright-tests:
         timeout-minutes: 60
-        runs-on: ubuntu-latest
         strategy:
             fail-fast: false
             matrix:
                 shardIndex: [1, 2, 3, 4]
                 shardTotal: [4]
+                platform: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: ${{ matrix.platform }}
         container:
             image: mcr.microsoft.com/playwright:v1.41.1-jammy
         steps:
@@ -68,7 +69,9 @@ jobs:
                   merge-multiple: true
 
             - name: Merge into HTML Report
-              run: npx playwright merge-reports --reporter html ./all-blob-reports
+              run: |
+                  npx playwright merge-reports --reporter html ./all-blob-reports
+                  npx playwright merge-reports --reporter junit ./all-blob-reports
 
             - name: Upload HTML report
               uses: actions/upload-artifact@v4
