--- a/.github/workflows/sharding.yml
+++ b/.github/workflows/sharding.yml
@@ -86,6 +86,6 @@ jobs:
             - name: Upload junit report
               uses: actions/upload-artifact@v4
               with:
-                  name: $PLAYWRIGHT_JUNIT_OUTPUT_NAME
-                  path: $PLAYWRIGHT_JUNIT_OUTPUT_PATH
+                  name: junit-report--attempt-${{ github.run_attempt }}
+                  path: playwright-report
                   retention-days: 14
