--- a/.github/workflows/sharding.yml
+++ b/.github/workflows/sharding.yml
@@ -68,7 +68,7 @@ jobs:
                   merge-multiple: true
 
             - name: Merge into HTML Report
-              run: npx playwright merge-reports --reporter html ./all-blob-reports
+              run: npx playwright merge-reports --reporter=html ./all-blob-reports
 
             - name: Upload HTML report
               uses: actions/upload-artifact@v4
@@ -81,11 +81,11 @@ jobs:
               env:
                   PLAYWRIGHT_JUNIT_OUTPUT_NAME: "results.xml"
                   PLAYWRIGHT_JUNIT_OUTPUT_PATH: ./junit-reports
-              run: npx playwright merge-reports --reporter junit ./all-blob-reports
+              run: npx playwright merge-reports --reporter=junit ./all-blob-reports
 
             - name: Upload junit report
               uses: actions/upload-artifact@v4
               with:
-                  name: junit-report--attempt-${{ github.run_attempt }}
+                  name: results.xml
                   path: playwright-report
                   retention-days: 14
