--- a/.github/workflows/sharding.yml
+++ b/.github/workflows/sharding.yml
@@ -81,7 +81,7 @@ jobs:
               env:
                   PLAYWRIGHT_JUNIT_OUTPUT_NAME: "junit-report.xml"
               run: |
-                  npx playwright merge-reports --reporter=junit > $PLAYWRIGHT_JUNIT_OUTPUT_NAME
+                  npx playwright merge-reports --reporter=junit ./all-blob-reports > $PLAYWRIGHT_JUNIT_OUTPUT_NAME
             - name: Upload junit report
               uses: actions/upload-artifact@v4
               with:
