--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,8 +1,8 @@
 name: xray
 
 on:
-    # push:
-    #     branches: [main]
+    push:
+        branches: [main]
     workflow_dispatch:
         inputs:
             testPlanKey:
