--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -26,6 +26,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 18
+                  fetch-depth: 0
             - name: Install dependencies
               run: npm ci
             - name: Run Playwright tests
@@ -35,13 +36,16 @@ jobs:
               run: |
                   npm run run:test
             - name: Run Chromatic
-              uses: chromaui/action@latest
-              with:
-                  # ⚠️ enable playwright
-                  playwright: true
-                  # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
-                  projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-                  run: git config --global --add safe.directory /__w/Playwright_LamdaTest/Playwright_LamdaTest
+                # uses: chromaui/action@latest
+                run: |
+                  git config --global --add safe.directory /__w/Playwright_LamdaTest/Playwright_LamdaTest
+                  npx chromatic --playwright -t=${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+            #   with:
+            #       # ⚠️ enable playwright
+            #       playwright: true
+            #       # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
+            #       projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+            #       run: git config --global --add safe.directory /__w/Playwright_LamdaTest/Playwright_LamdaTest
             - uses: actions/upload-artifact@v3
               if: always()
               with:
