--- a/.github/workflows/mainFlow.yml
+++ b/.github/workflows/mainFlow.yml
@@ -1,8 +1,8 @@
-name: xray
+name: mainFlow
 
 on:
-    # push:
-    #     branches: [main]
+    push:
+        branches: [main]
     workflow_dispatch:
         inputs:
             testPlanKey:
@@ -39,12 +39,6 @@ jobs:
                   HOME: /root
               run: |
                   npx playwright test --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
-            - name: Run Chromatic
-              uses: chromaui/action@latest
-              with:
-                  playwright: true
-                  projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-
             - name: Upload blob report to GitHub Actions Artifacts
               if: always()
               uses: actions/upload-artifact@v4
