--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -23,10 +23,11 @@ jobs:
             image: mcr.microsoft.com/playwright:v1.41.1-jammy
         steps:
             - uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
             - uses: actions/setup-node@v3
               with:
                   node-version: 18
-                  fetch-depth: 0
             - name: Install dependencies
               run: npm ci
             - name: Run Playwright tests
