--- a/.github/workflows/mainFlow.yml
+++ b/.github/workflows/mainFlow.yml
@@ -39,7 +39,10 @@ jobs:
               env:
                   HOME: /root
               run: |
-                  npx playwright test --shard=${{ matrix.shard }}/${{ strategy.job-total }}
+                  pwd
+                  cd projects/LambdaTest/testdata
+                  ls
+                  npx playwright test --grep='@ddt' --project='webkit'
             - uses: actions/upload-artifact@v4
               if: always()
               with:
