--- a/.github/workflows/mainFlow.yml
+++ b/.github/workflows/mainFlow.yml
@@ -41,7 +41,7 @@ jobs:
               run: |
                   pwd
                   ls -a
-                  npx playwright test --grep='@ddt' --project='chromium'
+                  npx playwright test --grep='@ddt' --project='webkit'
             - uses: actions/upload-artifact@v4
               if: always()
               with:
