--- a/.github/workflows/mainFlow.yml
+++ b/.github/workflows/mainFlow.yml
@@ -39,9 +39,7 @@ jobs:
               env:
                   HOME: /root
               run: |
-                  pwd
-                  ls -a
-                  npx playwright test --grep='@ddt' --project='webkit'
+                  npx playwright test --shard=${{ matrix.shard }}/${{ strategy.job-total }}
             - uses: actions/upload-artifact@v4
               if: always()
               with:
