refactor config and item component

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PROJECT=LambdaTest
 TEST_ENVIRONMENT=QA
-BASE_URL= https://ecommerce-playground.lambdatest.io/
-API_URL= https://ecommerce-playground.lambdatest.io/index.php/
-USER_NAME=myname1@gmail.com
-PASSWORD=password
+BASE_URL=
+API_URL=
+USER_NAME=
+PASSWORD=
 
 XRAY_TESTPLAN=KAN-7
 XRAY_PROJECTKEY=KAN
